--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -2,7 +2,7 @@ name: Hot News Crawler
 
 on:
   schedule:
-    - cron: '0 */2 * * *'  # 每50分钟运行一次
+    - cron: '0 */2 * * *'  # 每2小时运行一次
   workflow_dispatch:
 
 # 添加权限设置
